--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase-admin": "^13.0.2",
     "next": "15.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
